fix margin on calendar route and shift wrap

--- a/program/src/styles/components/_app-detail.scss
+++ b/program/src/styles/components/_app-detail.scss
@@ -4,7 +4,7 @@
 }
 
 @media (max-width: $breakpoint-min-md) {
-  .app-detail {
-      margin-top: 50px;
+  .calendar-opened .app-detail {
+    margin-top: 50px;
   }
 }
