--- a/program/src/styles/elements/_add-event-dialog.scss
+++ b/program/src/styles/elements/_add-event-dialog.scss
@@ -9,6 +9,7 @@
 
   &__shift-buttons {
     display: flex;
+    flex-flow: wrap;
     justify-content: space-between;
   }
 
